Fri Jul  3 18:17:48 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (build_pwfile): Add rule to build the build_pwfile
		program.   

	* kadm_server.c (kadm_ser_cpw): Put the call to the
		kadm_approve_pw in the common code, so it's executed even
		if KADM5 is defined.  Add appropriate syslogs to the
		change password processing.

	* kadm_funcs.c (pwstring;): If NDBM_PW_CHECK is defined, then do
		the NDBM-based dictionary check.   Build kadmind4 using
		the make option PW_CHECK=-DNDBM_PW_CHECK if this feature
		is desired.

1998-05-08  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kadm_server.c (krb_log): Print the year using 4 digit to avoid
		Y2K issues.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* admin_server.c (argv): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.

Fri Feb 27 23:32:38 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the kadmin
 		directory, since we've moved all of the configure.in
		tests to the toplevel kadmin configure.in

Wed Feb 18 16:00:59 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Oct 23 13:07:01 1997  Ezra Peisach  <epeisach@mit.edu>

	* kadm_server.h: Declare kadm_context as extern so it will not be
	 	multiply defined in all source files.

Wed Aug  6 20:27:27 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Add support for compiling with Hesiod.

Fri Jul 25 15:49:58 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_funcs.c: Remove mention of dbm for now.  It should probably
	be added back later to deal with dbm-hashed passwd files.

Tue Jul  1 02:38:50 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_funcs.c, kadm_server.c, kadm_ser_wrap.c: Reenable mod and
	check_pw.

	* kadm_funcs.c, kadm_server.c, kadm_ser_wrap.c: Reenable get and
	add.
